--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-principal:#fefdfa;
-    --color-secundario:#E4D6B8;
-    --color-terciario:#E4D6B8;
+    --color-secundario:#EDC5C7;
+    --color-terciario:#EDC5C7;
     --font-principal:'Schoolbell', cursive;
     --font-secundaria:'Nunito Sans', sans-serif;
 }
